# google-meet-clone

./: pyproject.toml  vercel.json
src/: app.py  requirements.txt  signaling.py
src/front-end/: index.css  index.js  lobby.css  lobby.js
src/templates/: index.html  lobby.html  main.html
