[tool.poetry]
name = "google-meet-clone"
version = "0.1.0"
description = ""
authors = ["wassafshahzad <wassafshahzad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
websockets = "^12.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
